# forwarder

./: .gitignore  Cargo.toml  README.md  build.rs
app/: Cargo.toml
app/src/: main.rs
forwarder/: Cargo.toml  build.rs  device.json
forwarder/interfaces/: io.edgehog.devicemanager.RemoteShell.json
forwarder/proto/edgehog_device_forwarder/: http.proto  message.proto  ws.proto
forwarder/src/: astarte.rs  bridge.rs  connection.rs  connections.rs  device.rs  forwarder.rs  lib.rs  msg_format.proto  proto.proto  proto.rs  proto_message.rs
scripts/: apache_bench.sh  start_bridge.sh  start_device.sh
src/: items.proto  main.rs
