[package]
name = "forwarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.6.1"
futures-util = "0.3.28"
serde = "1.0.180"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-tungstenite = "0.20.0"
tungstenite = "0.20.0"
