[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
console-subscriber = "0.1.10"
forwarder = { path = "../forwarder" }
futures-util = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.1"
clap = { version = "3.2.25", features = ["derive"] }
