[package]
name = "forwarder"
version = "0.1.0"
edition = "2021"
rust-version = "1.66.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.6.1"
futures-util = "0.3.28"
serde = { version = "1.0.180", features = ["rc"] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-tungstenite = "0.20.0"
tungstenite = "0.20.0"
console-subscriber = "0.1.10"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
color-eyre = "0.6.2"
prost = "0.12.0"
prost-types = "0.12.0"
url = "2.4.1"
# pinned transitive dependencies
time = "=0.3.23"
reqwest = "0.11.20"
rand = "0.8.5"
backoff = { version = "0.4.0", features = ["tokio"] }
thiserror = "1.0.48"
displaydoc = "0.2.4"

[build-dependencies]
prost-build = "0.12.0"
